# zebra-label-printer

./: README.md  codigos.txt  etiq_modelo.txt  lote.py  out.txt  pyproject.toml  request.py  requirements.txt  resultado_final_stanley.xlsx  send_labels_from_xlsx.py  send_labelss.py
src/: request.py  send_labels.py  send_labelss.py
src/printer/: __init__.py  connector.py  usb_socket.py
tests/: test_send_labels.py
