[tool.poetry]
name = "zebra-label-printer"
version = "0.1.0"
description = "A Python project to connect to Zebra printers and send labels for printing."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"